SaveReceipt erweitert (Galileo: Kunde) Logging optimiert (Logger, anstelle von LogManager.getLogManager().